# sysrust

./: Cargo.toml  Makefile  abcd.sysrs  abro.sysrs  build.rs  example_prog.sysrs  example_prog.txt  forklift_controller.sysrs  graycounter.sysrs  lego.sysrs  microwave.sysrs  multi7.sysrs  pacemaker.sysrs  reflex.sysrs  robot_controller.sysrs  tt.c  washing_machine.sysrs
bench/: abro.strl  microwave.strl  robot.strl  washing_machine.strl
src/: analyse.rs  ast.rs  backend.rs  error.rs  lexer.rs  lib.rs  main.rs  og.lalrpop  rewrite.rs  sysrust.rs  tokens.rs
